<resources>
    <string name="app_name">Expense Manager</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_advanced">Advanced</string>
    <string name="welcome">Welcome back, </string>
    <string name="enter_username_email">Username or Email ID</string>
    <string name="enter_password">Password</string>
    <string name="login">Login</string>
    <string name="password">1234</string>
    <string name="email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dine_out">Dine Out</string>
    <string name="travel">Travel</string>
    <string name="food">Food</string>
    <string name="groceries">Groceries</string>
    <string name="investment">Investment</string>
    <string name="entertainment">Entertainment</string>
    <string name="luxury">Luxury</string>
    <string name="fruits_veg"><![CDATA[Fruits & Veg]]></string>
    <string name="utilities">Utilities</string>
    <string name="list">List</string>
    <string name="bank">Bank</string>
    <string name="shopping">Shopping</string>
    <string name="item">Item</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="remarks">Remarks</string>
    <string name="add_expense">Add Expense</string>
    <string name="enter_product">Enter Product</string>
    <string name="enter_price">Enter Price</string>
    <string name="select_date">Select Date</string>
    <string name="enter_remarks">Enter Remarks (optional)</string>
    <string name="log_out">LogOut</string>
    <string name="clear_expense">Clear Expenses</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="id">ID</string>
    <string name="extras">Extras</string>
    <string name="bank_password">Enter Password To Enter :</string>
    <string name="enter_bank_name">Enter Bank Name</string>
    <string name="enter_account_number">Enter Account Number</string>
    <string name="add_details">Add Details</string>
    <string name="enter_ifsc_code">Enter IFSC Code</string>
    <string name="enter">Enter</string>
    <string name="add_data">Add Data</string>
    <string name="owed">Owed</string>
    <string name="borrowed">Borrowed</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_name">Enter Name</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="b_o">B/O</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_type">Select Type</string>
    <string name="go">GO</string>
    <string name="ending_range">Ending Range</string>
    <string name="starting_range">Starting Range</string>
    <string name="enter_month">Enter Month</string>
    <string name="day_wise">Day-Wise</string>
    <string name="month_wise">Month-Wise</string>
    <string name="year_wise">Year-Wise</string>
    <string name="category">Category</string>
    <string name="color">Color</string>
    <string name="enter_year">Enter Year</string>
    <string name="calculator">Calculator</string>
    <string name="not_registered_sign_up">Not Registered? Sign Up!</string>
    <string name="change_password">Change Password</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="already_registered_login">Already Registered? Login!</string>
    <string name="bank_details_password">Bank Details Password (Default : 1234)</string>
    <string name="a_secure_password_to_preserve_your_bank_details">A secure password to preserve your bank details!</string>
    <string name="change_banking_password">Change Banking Password</string>
    <string name="total_amount">Total Amount</string>
    <string name="enter_date">Enter Date(YYYY-MM-DD)</string>
    <string name="calender_view">Calender View</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="confirm_username">Confirm Username</string>
    <string name="refresh">Refresh</string>
    <string name="sample_image">Sample Image</string>
    <string name="backup">Backup</string>
    <string name="upload">Upload</string>
    <string name="profile_image">Profile Image</string>
    <string name="forgot_banking_password">Forgot Banking Password</string>
    <string name="set">Set</string>

    <string-array name="search">
        <item>Select</item>
        <item>Day-Wise</item>
        <!--<item>Week-Wise</item>-->
        <item>Month-Wise</item>
        <item>Year-Wise</item>
        <item>Product</item>
        <item>Price</item>
        <item>Advanced</item>
    </string-array>

    <string-array name="questions">
        <item>Select</item>
        <item>What was the name of your first pet?</item>
        <item>In which city you were born?</item>
        <item>What was the name of your first school?</item>
        <!--<item>Year-Wise</item>
        <item>Product</item>
        <item>Price</item>
        <item>Advanced</item>-->
    </string-array>

    <string-array name="categories">
        <item>Travel</item>
        <item>Food</item>
        <item>Fruits &amp; Veg</item>
        <item>Groceries</item>
        <item>Extras</item>
        <item>Utilities</item>
        <item>Dine Out</item>
        <item>Shopping</item>
        <item>Luxury</item>
        <item>Investment</item>
        <item>List</item>
    </string-array>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="password">
        <item>User</item>
        <item>Bank</item>
    </string-array>

</resources>
