<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/chart"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_calculator"
        android:icon="@drawable/calculator"
        android:title="@string/calculator" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_advanced"
        android:icon="@drawable/filter"
        android:title="@string/title_advanced" />

    <item
    android:id="@+id/navigation_profile"
    android:icon="@drawable/account_settings"
    android:title="@string/title_profile" />

</menu>
