<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/corners_rounded">

    <EditText
        android:id="@+id/etBankName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_bank_name"
        android:inputType="textCapWords"
        tools:ignore="Autofill"
        android:layout_margin="5dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etAccountNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_account_number"
        android:inputType="number"
        tools:ignore="Autofill"
        android:layout_margin="5dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etIFSCCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_ifsc_code"
        android:inputType="textCapCharacters"
        tools:ignore="Autofill"
        android:layout_margin="5dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etBankRemarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_remarks"
        android:inputType="textCapSentences"
        tools:ignore="Autofill"
        android:layout_margin="5dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/buAddBank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_details"
        android:layout_gravity="right"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        tools:ignore="RtlHardcoded" />

</LinearLayout>