<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/corners_rounded">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:inputType="textCapWords"
        tools:ignore="Autofill"
        android:layout_margin="5dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount"
        android:inputType="date"
        tools:ignore="Autofill"
        android:layout_margin="5dp"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:id="@+id/rgDebt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_margin="5dp">
            <RadioButton
                android:id="@+id/rbBorrowed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borrowed"
                android:checked="true"
                android:layout_marginEnd="24dp"/>
            <RadioButton
                android:id="@+id/rbOwed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owed"/>
        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/etRemarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_remarks"
        android:inputType="textCapWords"
        tools:ignore="Autofill"
        android:layout_margin="5dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/buAddData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_data"
        android:layout_gravity="right"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        tools:ignore="RtlHardcoded" />

</LinearLayout>