<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_marginTop="10dp"
        tools:ignore="ContentDescription" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username_email"
            android:backgroundTint="#CEBFBF"
            android:inputType="textEmailAddress"
            android:layout_margin="16dp"
            android:textAlignment="center"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:backgroundTint="#CEBFBF"
            android:inputType="textPassword"
            android:layout_margin="16dp"
            android:textAlignment="center"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:backgroundTint="#CEBFBF"
            android:inputType="textPassword"
            android:layout_margin="16dp"
            android:textAlignment="center"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinnerQuestions"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:entries="@array/questions" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etSecurityAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_answer"
            android:backgroundTint="#CEBFBF"
            android:inputType="textPassword"
            android:layout_margin="16dp"
            android:textAlignment="center"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etBankPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bank_details_password"
            android:backgroundTint="#CEBFBF"
            android:inputType="textPassword"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#CEBFBF"
        android:textSize="15sp"
        android:text="@string/a_secure_password_to_preserve_your_bank_details" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:backgroundTint="@color/button"
        android:onClick="buSignUp"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#CEBFBF"
        android:textSize="15sp"
        android:text="@string/already_registered_login" />

</LinearLayout>