<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/corners_rounded">

    <EditText
        android:id="@+id/etStartRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/starting_range"
        android:inputType="number"
        tools:ignore="Autofill"
        android:layout_margin="5dp"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/etEndRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ending_range"
        android:inputType="number"
        tools:ignore="Autofill"
        android:layout_margin="5dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/buSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:layout_gravity="right"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        tools:ignore="RtlHardcoded" />
</LinearLayout>