<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="24dp"
        tools:ignore="ContentDescription" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username_email"
            android:backgroundTint="#CEBFBF"
            android:inputType="textEmailAddress"
            android:layout_margin="16dp"
            android:textAlignment="center"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_password"
            android:backgroundTint="#CEBFBF"
            android:inputType="textPassword"
            android:layout_margin="16dp"
            android:textAlignment="center"
            tools:ignore="Autofill" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/button"
        android:onClick="buLogin"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#CEBFBF"
        android:textSize="15sp"
        android:text="@string/not_registered_sign_up" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#CEBFBF"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password" />

</LinearLayout>