<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorPrimary">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_marginTop="10dp"
        tools:ignore="ContentDescription" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username_email"
            android:backgroundTint="#CEBFBF"
            android:inputType="textEmailAddress"
            android:layout_margin="16dp"
            android:textAlignment="center"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buGetUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_username"
        android:textColor="@color/white"
        android:layout_margin="24dp"
        android:padding="12dp"
        android:backgroundTint="@color/button"
        android:onClick="buSignUp"/>

    <TextView
        android:id="@+id/tvSecurityQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#CEBFBF"
        android:layout_margin="16dp"
        android:textSize="25sp"
        android:textAlignment="center"
        android:visibility="gone"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilSecurityAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <EditText
            android:id="@+id/etSecurityAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_answer"
            android:backgroundTint="#CEBFBF"
            android:inputType="textPassword"
            android:layout_margin="16dp"
            android:textAlignment="center"
            tools:ignore="Autofill" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buForgetPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:backgroundTint="@color/button"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#CEBFBF"
        android:textSize="15sp"
        android:text="@string/already_registered_login" />

</LinearLayout>